syntax = "proto3";

option csharp_namespace = "SmartStore.GrpcService";

package product;

service Product {
  rpc GetAll (Empty) returns (ProductList);
  rpc GetById (ProductRequest) returns (ProductResponse);
}

message Empty {}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
}

message ProductList {
  repeated ProductResponse products = 1;
}